fix: changed mainpage popup overflow

--- a/src/components/menuPopup/menuPopup.module.scss
+++ b/src/components/menuPopup/menuPopup.module.scss
@@ -5,6 +5,7 @@
   z-index: 2;
   inset: 0;
   overflow-y: auto;
+  overflow-x: hidden;
   display: grid;
   place-items: center;
   background-color: rgb(24 24 23 / 20%);
